--- a/docs-site/src/pages/api-reference.astro
+++ b/docs-site/src/pages/api-reference.astro
@@ -19,6 +19,7 @@ import Layout from "../layouts/Layout.astro";
   <ul>
     <li><code>sampling::seq_bootstrap</code>, <code>sampling::get_ind_matrix</code>, <code>sampling::get_ind_mat_average_uniqueness</code></li>
     <li><code>cross_validation::ml_cross_val_score</code>, <code>cross_validation::ml_get_train_times</code>, <code>cross_validation::PurgedKFold</code></li>
+    <li><code>hyperparameter_tuning::grid_search</code>, <code>hyperparameter_tuning::randomized_search</code>, <code>hyperparameter_tuning::sample_log_uniform</code>, <code>hyperparameter_tuning::classification_score</code></li>
     <li><code>feature_importance::mean_decrease_impurity</code>, <code>feature_importance::mean_decrease_accuracy</code>, <code>feature_importance::single_feature_importance</code></li>
     <li><code>fingerprint::RegressionModelFingerprint</code>, <code>fingerprint::ClassificationModelFingerprint</code></li>
     <li><code>sb_bagging::SequentiallyBootstrappedBaggingClassifier</code>, <code>sb_bagging::SequentiallyBootstrappedBaggingRegressor</code></li>
