feat(openquant): add AFML ch13 synthetic backtesting module

--- a/docs-site/src/pages/api-reference.astro
+++ b/docs-site/src/pages/api-reference.astro
@@ -21,6 +21,7 @@ import Layout from "../layouts/Layout.astro";
     <li><code>cross_validation::ml_cross_val_score</code>, <code>cross_validation::ml_get_train_times</code>, <code>cross_validation::PurgedKFold</code></li>
     <li><code>backtesting_engine::run_walk_forward</code>, <code>backtesting_engine::run_cross_validation</code>, <code>backtesting_engine::run_cpcv</code>, <code>backtesting_engine::cpcv_path_count</code></li>
     <li><code>hyperparameter_tuning::grid_search</code>, <code>hyperparameter_tuning::randomized_search</code>, <code>hyperparameter_tuning::sample_log_uniform</code>, <code>hyperparameter_tuning::classification_score</code></li>
+    <li><code>synthetic_backtesting::calibrate_ou_params</code>, <code>synthetic_backtesting::generate_ou_paths</code>, <code>synthetic_backtesting::search_optimal_trading_rule</code>, <code>synthetic_backtesting::detect_no_stable_optimum</code></li>
     <li><code>feature_importance::mean_decrease_impurity</code>, <code>feature_importance::mean_decrease_accuracy</code>, <code>feature_importance::single_feature_importance</code></li>
     <li><code>fingerprint::RegressionModelFingerprint</code>, <code>fingerprint::ClassificationModelFingerprint</code></li>
     <li><code>sb_bagging::SequentiallyBootstrappedBaggingClassifier</code>, <code>sb_bagging::SequentiallyBootstrappedBaggingRegressor</code></li>
