feat(openquant): add AFML ch15 strategy risk diagnostics

--- a/docs-site/src/pages/api-reference.astro
+++ b/docs-site/src/pages/api-reference.astro
@@ -41,6 +41,7 @@ import Layout from "../layouts/Layout.astro";
     <li><code>cla::CLA</code>, <code>hrp::HierarchicalRiskParity</code>, <code>hcaa::HierarchicalClusteringAssetAllocation</code>, <code>onc::get_onc_clusters</code></li>
     <li><code>RiskMetrics::calculate_value_at_risk</code>, <code>RiskMetrics::calculate_expected_shortfall</code>, <code>RiskMetrics::calculate_conditional_drawdown_risk</code></li>
     <li><code>backtest_statistics::sharpe_ratio</code>, <code>backtest_statistics::deflated_sharpe_ratio</code>, <code>backtest_statistics::drawdown_and_time_under_water</code></li>
+    <li><code>strategy_risk::sharpe_symmetric</code>, <code>strategy_risk::implied_precision_asymmetric</code>, <code>strategy_risk::estimate_strategy_failure_probability</code></li>
   </ul>
 
   <h2>5. Market Microstructure, Dependence and Regime Detection</h2>
